# myllah-api

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/api/: router.py
app/api/endpoints/: agent.py  health.py  recipes.py
app/core/: azure_config.py  config.py
app/schemas/: recipe.py
app/services/: agent_service.py  image_service.py  recipe_service.py
tests/: test_agent_service.py
